fixed too narrow dialogs and removed half the padding ontop of the table

--- a/excelreview.css
+++ b/excelreview.css
@@ -1,6 +1,6 @@
 .Game {
 	margin:0px;padding:0px;
-	padding-top:3em;
+	padding-top:1.5em;
 	width:60%;
 	margin:auto;
 	border:1px solid #ffffff;
